--- a/HelloDoc/Views/AdminDash/AdminProfile.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminProfile.cshtml
@@ -4,11 +4,12 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
+
+
 <div class="container bg-gradient px-0 backbtn d-flex align-items-center my-4 justify-content-between">
 
     <h4 class="text-body align-middle my-0 ">My Profile</h4>
-    <a 
-       class="p-2 border text-decoration-none border-info rounded bg-transparent">
+    <a class="p-2 border text-decoration-none border-info rounded bg-transparent">
         <svg xmlns="http://www.w3.org/2000/svg"
              width="16"
              height="16"
@@ -29,23 +30,23 @@
                 <input type="text"
                        asp-for="UserName"
                        class="form-control shadow-none"
-                       placeholder="UserName"  disabled/>
+                       placeholder="UserName" disabled />
                 <label for="floatingInput" class="ms-2">UserName</label>
 
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
                 <input type="password"
-                      asp-for="Password"
+                       asp-for="Password"
                        class="form-control shadow-none"
                        placeholder="Password" />
                 <label for="floatingInput" class="ms-2">Password</label>
-                
+
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
 
                 <select class="form-control py-2" name="SelectedStateId">
                     <option selected>Select Status</option>
-                   @*  <option>Select State</option>
+                    @*  <option>Select State</option>
                     @foreach (var state in Model.Regions)
                     {
                     <option value="@state.RegionId">@state.Name</option>
@@ -54,7 +55,7 @@
             </div>
             <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
 
-                <select class="form-control py-2" 
+                <select class="form-control py-2"
                     <option selected>Select Role</option>
                     @*@foreach (var state in Model.Region)
                     {
@@ -67,51 +68,51 @@
             </div>
 
 
-            </form>
+    </form>
 </div>
-            <h4 class="text-body">Administrator Information</h4>
-        <form method="post" asp-action="AdministratorInformation" asp-controller="AdminDash">
-               <div class="row gx-4">
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="text"
-                        asp-for="FirstName"
+<h4 class="text-body">Administrator Information</h4>
+<form method="post" asp-action="AdministratorInformation" asp-controller="AdminDash">
+    <div class="row gx-4">
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <input type="text"
+                   asp-for="FirstName"
                    class="form-control shadow-none changable"
-                       placeholder="FirstName"  disabled/>
-                <label for="floatingInput" class="ms-2">FirstName</label>
-             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="text"
-                       asp-for="LastName"
+                   placeholder="FirstName" disabled />
+            <label for="floatingInput" class="ms-2">FirstName</label>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <input type="text"
+                   asp-for="LastName"
                    class="form-control shadow-none changable"
                    placeholder="LastName" disabled />
-                <label for="floatingInput" class="ms-2" >LastName</label>
-               
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="email"
-                         asp-for="Email"
+            <label for="floatingInput" class="ms-2">LastName</label>
+
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <input type="email"
+                   asp-for="Email"
                    class="form-control shadow-none changable"
                    placeholder="Email" disabled />
-                <label for="floatingInput" class="ms-2">Email</label>
-             
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <label for="floatingInput" class="ms-2">Email</label>
+
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
             <input type="email"
                    asp-for="ConfirmEmail"
                    class="form-control shadow-none changable"
                    placeholder="Confirmemail" disabled />
-                <label for="floatingInput" class="ms-2">Confirm Email</label>
-             
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="tel"
-                      asp-for="PhoneNumAspNetUsers"
+            <label for="floatingInput" class="ms-2">Confirm Email</label>
+
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <input type="tel"
+                   asp-for="PhoneNumAspNetUsers"
                    class="form-control shadow-none changable"
                    placeholder="phone" disabled />
-                <label for="floatingInput" class="ms-2">Phone No.</label>
-                
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 my-3 ">
+            <label for="floatingInput" class="ms-2">Phone No.</label>
+
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 my-3 ">
 
             @{
                 var i = 0;
@@ -121,7 +122,7 @@
                 if (i < Model.statesForChecked.Count && state.RegionId == Model.statesForChecked[i].Value)
                 {
                     <input class="form-check-input text-body changable" name="states" for="box1" type="checkbox" id="@state.RegionId"
-                           value="@state.RegionId" checked disabled/>
+                           value="@state.RegionId" checked disabled />
                     <label class="form-check-label fs-6" for="states">
                         @state.Name
                     </label>
@@ -130,15 +131,15 @@
                 else
                 {
                     <input class="form-check-input text-body changable" name="states" for="box1" type="checkbox" id="@state.RegionId"
-                           value="@state.RegionId" disabled/>
+                           value="@state.RegionId" disabled />
                     <label class="form-check-label fs-6" for="states">
                         @state.Name
                     </label>
                 }
-                
+
             }
-         
-            </div>
+
+        </div>
         <div class="d-flex justify-content-end my-1">
             <button onclick="toggleEdit()" type="button" class="btn border-none bg-info p-3 text-light fw-semibold me-4" id="EditBtn">
                 Edit
@@ -150,60 +151,60 @@
                 Cancle
             </button>
         </div>
-    </form>
-    </div>    
-    <h4 class="text-body">Mailing & Billing Information</h4>
-       <form asp-action="MailingBillingInformation" method="post">
-       <div class="row gx-4">
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="text"
-                       asp-for="Address1"
+</form>
+    </div>
+<h4 class="text-body">Mailing & Billing Information</h4>
+<form asp-action="MailingBillingInformation" method="post">
+    <div class="row gx-4">
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <input type="text"
+                   asp-for="Address1"
                    class="form-control shadow-none changable1"
-                       placeholder="UserName" disabled />
-                <label for="floatingInput" class="ms-2">Address1</label>
+                   placeholder="UserName" disabled />
+            <label for="floatingInput" class="ms-2">Address1</label>
 
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
             <input type="text"
                    asp-for="Address2"
                    class="form-control shadow-none changable1"
                    placeholder="Password" disabled />
-                <label for="floatingInput" class="ms-2">Address2</label>
-                
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-                <input type="text"
-                       asp-for="City"
+            <label for="floatingInput" class="ms-2">Address2</label>
+
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <input type="text"
+                   asp-for="City"
                    class="form-control shadow-none changable1"
                    placeholder="Password" disabled />
-                <label for="floatingInput" class="ms-2">City</label>
+            <label for="floatingInput" class="ms-2">City</label>
 
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
 
             <select class="form-control py-2 changable1" name="SelectedStateId" asp-for="state" disabled>
-                   
-                    @foreach (var state in Model.Regions)
-                    {
-                    <option value="@state.RegionId">@state.Name</option>
-                    }
-                </select>
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
-            <input type="text"
-                    asp-for="zip"
-                   class="form-control shadow-none changable1"
-                   placeholder="Password" disabled />
-                <label for="floatingInput" class="ms-2">Zip</label>
 
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+                @foreach (var state in Model.Regions)
+                {
+                    <option value="@state.RegionId">@state.Name</option>
+                }
+            </select>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
             <input type="text"
-                     asp-for="MobileNumAdmin"
+                   asp-for="zip"
                    class="form-control shadow-none changable1"
                    placeholder="Password" disabled />
-                <label for="floatingInput" class="ms-2">Mobile Num</label>
-            </div>
+            <label for="floatingInput" class="ms-2">Zip</label>
+
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 form-floating my-3">
+            <input type="text"
+                   asp-for="MobileNumAdmin"
+                   class="form-control shadow-none changable1"
+                   placeholder="Password" disabled />
+            <label for="floatingInput" class="ms-2">Mobile Num</label>
+        </div>
         <div class="d-flex justify-content-end my-1">
             <button onclick="toggleEdit1()" type="button" class="btn border-none bg-info p-3 text-light fw-semibold me-4" id="EditBtn1">
                 Edit
@@ -215,80 +216,82 @@
                 Cancle
             </button>
         </div>
-    </form>
+</form>
             </div>
         </div>
 </div>
 
 
-@section scripts {
-    <!-- jQuery script -->
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/jquery/jquery.min.js"></script>
 
-    <script>
+<!-- jQuery script -->
 
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script>
+
+    $("#CancelBtn").hide();
+    $("#SaveBtn").hide();
+
+
+    function toggleEdit() {
+
+        var inputFields = document.querySelectorAll('.changable');
+
+
+        inputFields.forEach(function (input) {
+            input.disabled = !input.disabled;
+        });
+
+        $("#CancelBtn").show();
+        $("#EditBtn").hide();
+        $("#SaveBtn").show();
+    }
+
+
+    function toggleCancel() {
+        var inputFields = document.querySelectorAll('.changable');
+
+        // Toggle the disabled attribute for each input field
+        inputFields.forEach(function (input) {
+            input.disabled = !input.disabled;
+        });
+
+        $("#EditBtn").show();
         $("#CancelBtn").hide();
         $("#SaveBtn").hide();
-        function toggleEdit() {
+    }
 
-            var inputFields = document.querySelectorAll('.changable');
-
-
-            inputFields.forEach(function (input) {
-                input.disabled = !input.disabled;
-            });
-
-            $("#CancelBtn").show();
-            $("#EditBtn").hide();
-            $("#SaveBtn").show();
-        }
+    $("#CancelBtn1").hide();
+    $("#SaveBtn1").hide();
 
 
-        function toggleCancel() {
-            var inputFields = document.querySelectorAll('.changable');
+    function toggleEdit1() {
 
-            // Toggle the disabled attribute for each input field
-            inputFields.forEach(function (input) {
-                input.disabled = !input.disabled;
-            });
+        var inputFields = document.querySelectorAll('.changable1');
 
-            $("#EditBtn").show();
-            $("#CancelBtn").hide();
-            $("#SaveBtn").hide();
-        } 
-        
+
+        inputFields.forEach(function (input) {
+            input.disabled = !input.disabled;
+        });
+
+        $("#CancelBtn1").show();
+        $("#EditBtn1").hide();
+        $("#SaveBtn1").show();
+    }
+
+
+    function toggleCancel1() {
+        var inputFields = document.querySelectorAll('.changable1');
+
+        // Toggle the disabled attribute for each input field
+        inputFields.forEach(function (input) {
+            input.disabled = !input.disabled;
+        });
+
+        $("#EditBtn1").show();
         $("#CancelBtn1").hide();
         $("#SaveBtn1").hide();
+    }
 
-
-        function toggleEdit1() {
-
-            var inputFields = document.querySelectorAll('.changable1');
-
-
-            inputFields.forEach(function (input) {
-                input.disabled = !input.disabled;
-            });
-
-            $("#CancelBtn1").show();
-            $("#EditBtn1").hide();
-            $("#SaveBtn1").show();
-        }
-
-
-        function toggleCancel1() {
-            var inputFields = document.querySelectorAll('.changable1');
-
-            // Toggle the disabled attribute for each input field
-            inputFields.forEach(function (input) {
-                input.disabled = !input.disabled;
-            });
-
-            $("#EditBtn1").show();
-            $("#CancelBtn1").hide();
-            $("#SaveBtn1").hide();
-        }
-
-    </script>
-}
+</script>
+    
