--- a/HelloDoc/wwwroot/css/site.css
+++ b/HelloDoc/wwwroot/css/site.css
@@ -34,3 +34,9 @@ body {
 [data-bs-theme = "light"] .color {
     background-color: #E9ECEF;
 }
+
+.dropdown-item:hover {
+    background-color: #0dcaf0;
+    color: #0dcaf0;
+    opacity: 0.8;
+}
