--- a/HelloDoc/Views/Login/Patient_login.cshtml
+++ b/HelloDoc/Views/Login/Patient_login.cshtml
@@ -2,23 +2,9 @@
 @model DAL.ViewModel.Patient_login;
 @{
     ViewData["Title"] = "Patient_login";
-    Layout = null;
+  Layout = "~/Views/Shared/_Layout3.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patient Login Page</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/HelloDoc.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" asp-append-version="true" />
-  
-    <link rel="stylesheet" href="~/css/Patient_login.css"  asp-append-version="true"/>
-</head>
-<body>
     <div class="container-fluid">
         <div class="row">
             <div class="col col-lg-6 col-sm-12 main-img opacity-50">
@@ -100,9 +86,9 @@
             </footer>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-</body>
-</html>
+   
+   
+    
+
 
 
