--- a/HelloDoc/Views/Shared/_AdminDash.cshtml
+++ b/HelloDoc/Views/Shared/_AdminDash.cshtml
@@ -66,35 +66,40 @@
 
             <div class="w-100 shadow  px-2 px-md-5  pt-2  border-5 border-bottom-5 d-none d-sm-block pb-1  ">
                 <ul class="nav nav-tabs-info nav-underline   fs-4 " id="pills-tab" role="tablist">
-                    <li class="nav-item text-info">
+                    <li class="nav-item ">
                         <a asp-action="AdminDash" asp-controller="AdminDash" style="text-decoration:none">
                             <button class="nav-link  text-info
-                   @(ViewContext.ActionDescriptor.RouteValues["action"] == "Index" ? "active" : "")">
+                     @(ViewContext.ActionDescriptor.RouteValues["action"] == "AdminDash" ? "active" : "")">
                                 Dashboard
                             </button>
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "ProviderLocation" ? "active" : "")">Provider Location</a>
+                        <a class="nav-link  @(ViewContext.ActionDescriptor.RouteValues["action"] == "ProviderLocation" ? "active" : "")">Provider Location</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-action="AdminProfile" asp-controller="AdminDash" style="text-decoration:none"><button class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Profile" ? "active" : "")">My Profile</button></a>
+                        <a asp-action="AdminProfile" asp-controller="AdminDash" style="text-decoration:none">
+                            <button class="nav-link text-info
+                            @(ViewContext.ActionDescriptor.RouteValues["action"] == "AdminProfile" ? "active" : "")">
+                                My Profile
+                            </button>
+                        </a>
                     </li>
-                   <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Provider" ? "active" : "")" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Provider" ? "active" : "")" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Provider
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-action="Provider" asp-controller="AdminDash"  class="dropdown-item">Provider</a></li>
-                            <li><a class="dropdown-item" >Scheduling</a></li>
+                        <ul class="dropdown-menu ">
+                            <li><a asp-action="Provider" asp-controller="AdminDash" class="dropdown-item">Provider</a></li>
+                            <li><a class="dropdown-item">Scheduling</a></li>
                             <li><a class="dropdown-item">Invoice</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Parteners" ? "active" : "")">Parteners</a>
+                        <a class="nav-link @(ViewContext.ActionDescriptor.RouteValues["action"] == "Parteners" ? "active" : "")">Parteners</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-info @(ViewContext.ActionDescriptor.RouteValues["action"] == "Records" ? "active" : "")">Records</a>
+                        <a class="nav-link  @(ViewContext.ActionDescriptor.RouteValues["action"] == "Records" ? "active" : "")">Records</a>
                     </li>
 
                 </ul>
@@ -145,7 +150,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>    *@
+    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> 
+   *@
+    @await Component.InvokeAsync("Notyf")
     @await RenderSectionAsync("Scripts", required: false)
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/jquery.min.js"></script>
