--- a/HelloDoc/Views/Shared/_Layout-1.cshtml
+++ b/HelloDoc/Views/Shared/_Layout-1.cshtml
@@ -66,6 +66,7 @@
     <script src="~/js/Patient_request.js" asp-append-version="true"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    @await Component.InvokeAsync("Notyf")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
