--- a/HelloDoc/Views/AdminDash/Provider.cshtml
+++ b/HelloDoc/Views/AdminDash/Provider.cshtml
@@ -31,7 +31,7 @@
                 
             </div>
             <div class="d-flex col-3 mr-0 py-2 justify-content-end">
-                <a class="btn btn-outline-info mx-2" style="width:fit-content">
+                    <a asp-action="CreateProviderAccount" class="btn btn-outline-info mx-2" style="width:fit-content">
                     <span>Create Provider Account</span>
                 </a>
             </div>
